align header fixed

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -127,7 +127,7 @@ header {
             // DROPDOWN 
             .dropdown-menu {
                 top: 97.5%;
-                left: -50%;
+                // left: -50%;
                 padding: 0;
                 background-color: $semi-mid-grey;
                 border: 0;
